--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
+sudo: false
 language: node_js
 node_js:
-  - "0.10"
-  - "0.11"
-  - "0.12"
-  - "iojs-v2.5.0"
+  - '5'
+  - '4'
 script: "npm test"
 before_install:
   - npm install -g mocha
