--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "event-stream": "^3.1.7",
     "fs-walk": "0.0.1",
     "gulp": "^3.9.0",
+    "lodash": "^4.13.1",
     "mocha": "*",
     "sha1": "^1.1.1",
     "should": "*",
