--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "chalk": "^1.1.3",
     "gulp-util": "*",
     "object-assign": "*",
-    "through2": "^2.0.0"
+    "through2": "^2.0.0",
+    "vinyl": "*"
   },
   "devDependencies": {
     "event-stream": "^3.1.7",
@@ -35,7 +36,6 @@
     "lodash": "^4.13.1",
     "mocha": "*",
     "sha1": "^1.1.1",
-    "should": "*",
-    "vinyl": "*"
+    "should": "*"
   }
 }
