--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "vinyl": "*"
   },
   "devDependencies": {
-    "event-stream": "^3.1.7",
+    "event-stream": "3.3.4",
     "fs-walk": "0.0.1",
     "gulp": "^3.9.0",
     "lodash": "^4.13.1",
